# agent-prototype

./: README.md
langgraph-agent/: .env  Augmented_LLM.ipynb  Router.ipynb  base_llm.py  pyproject.toml  real_agent.py
langgraph-agent/.ipynb_checkpoints/: Agent-checkpoint.ipynb  Augmented_LLM-checkpoint.ipynb  Evaluator-Optimizer-checkpoint.ipynb  Orchestrator-Worker-checkpoint.ipynb  Parallelization-checkpoint.ipynb  Prompt_Chaining-checkpoint.ipynb  Real_Agent-checkpoint.ipynb
