[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "jupter>=0.1.0",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.16",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.5.0",
    "python-dotenv>=1.1.1",
]
